drupal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal
  labels:
    app: drupal
    type: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
      type: frontend
  template:
    metadata:
      labels:
        app: drupal
        type: frontend
    spec:
      volumes:
        - name: volumen-drupal
          persistentVolumeClaim:
            claimName: pvc-drupal
      containers:
        - name: contenedor-drupal
          image: gonzalomarin/drupal:latest
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
          volumeMounts:
            - mountPath: /var/www/html/sites/default/files
              name: volumen-drupal
          logging:
            driver: "fluentd"
            options:
              fluentd-address: "fluentd.default.svc.cluster.local:24224"
              fluentd-async-connect: "true"
              tag: "drupal"
#          env:
#            - name: MYSQL_HOST
#              value: mariadb-service
#            - name: MYSQL_USER
#              valueFrom:
#                configMapKeyRef:
#                  name: bd-datos
#                  key: bd_user
#            - name: MYSQL_PASSWORD
#              valueFrom:
#                secretKeyRef:
#                  name: bd-passwords
#                  key: bd_password
#            - name: MYSQL_DATABASE
#              valueFrom:
#                configMapKeyRef:
#                  name: bd-datos
#                  key: bd_dbname
