fluentb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd
  labels:
    app: fluentd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      volumes:
        - name: pv-fluentd
      containers:
        - name: fluentd
          image: grafana/fluent-bit-plugin-loki
          #image: fluent/fluent-bit:latest
          ports:
            - containerPort: 24224
              name: fluentd-port
            - containerPort: 2020
              name: fluentd-port2
            - containerPort: 2021
              name: fluentd-port3
          volumeMounts:
            - mountPath: /fluent-bit/etc/
              name: pv-fluentd
            - name: varlog
              mountPath: /var/log
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: mnt
              mountPath: /mnt
              readOnly: true
      volumes:
        - name: pv-fluentd
          configMap:
            name: fluent-bit-configmap
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: mnt
          hostPath:
            path: /mnt
