drupal-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal
  labels:
    app: drupal
    type: frontend
spec:
  selector:
    app: drupal
    type: frontend
  ports:
  - name: http-sv-port
    port: 80
    targetPort: http-port
  - name: https-sv-port
    port: 443
    targetPort: https-port
  type: NodePort
