grafana-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
    type: frontend
spec:
  selector:
    app: grafana
    type: frontend
  ports:
  - name: grafana2-srv-port
    port: 3000
    targetPort: grafana-port
  type: ClusterIP
