loki-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  labels:
    app: loki
    type: backend
spec:
  selector:
    app: loki
    type: backend
  ports:
  - name: loki-srv-port
    port: 3100
    targetPort: loki-port
  type: NodePort
