drupal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-ingress
  labels:
    app: drupal
    type: frontend
spec:
  rules:
  - host: www.midrupal.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drupal-service
            port:
              name: http-sv-port
